--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
 <script src="./src/app/utils/validate-inputs.js"></script>
 <script src="./src/app/utils/parse-inputs.js"></script>
 <script src="./src/app/app.js"></script> -->
-<script src="./dist/main.js"></script>
+<!-- <script src="./dist/main.js"></script> -->
+<script src="./target/bundle.js"></script>
 
 </html>
