--- a/src/template.html
+++ b/src/template.html
@@ -10,6 +10,7 @@
 </head>
 
 <body class="container">
+    <!-- Bootstrap Bavbar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="#">Navbar w/ text</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText"
@@ -33,6 +34,9 @@
             </span>
         </div>
     </nav>
+
+
+
     <h1 class="text-center mt-5">
         Welcome!
     </h1>
